Fix: Admin reservations auto-accepted, add cache-control headers, improve overlap validation logging
- Admin panel reservations now automatically set to 'accepted' status
- Customer reservations remain 'pending' by default
- Added cache-control headers to prevent browser caching issues
- Enhanced overlap validation with detailed console logging
- Backend now accepts 'status' field in POST /reservations
- Only accepted reservations are checked for conflicts (pending/refused ignored)
- Added debugging tools: check-car4.js, check-all-reservations.js

--- a/index.html
+++ b/index.html
@@ -2327,9 +2327,9 @@
                 Object.keys(carsDatabase).forEach(key => delete carsDatabase[key]);
                 
                 cars.forEach(car => {
-                    // Filtrer les réservations pour cette voiture
+                    // Filtrer les réservations pour cette voiture (seulement les acceptées)
                     const carReservations = allReservations
-                        .filter(res => res.carId === car.id)
+                        .filter(res => res.carId === car.id && res.status === 'accepted')
                         .map(res => ({
                             id: res.id,
                             startDate: res.startDate,
