--- a/pages/contact.html
+++ b/pages/contact.html
@@ -274,7 +274,7 @@
                     <p>🏢 <strong data-contact="company">FANDIAUTO Location</strong></p>
                     <p data-contact="address">47 Riat Makhoukh, mansourah, Tlemcen 13000, Algérie</p>
                     <div class="social-links" style="margin-top: 1rem;">
-                        <a href="https://maps.google.com" class="social-btn" target="_blank">
+                        <a href="hhttps://maps.app.goo.gl/C7xtw9d5wtbLaZ1c9" class="social-btn" target="_blank">
                             🗺️ Voir sur Google Maps
                         </a>
                     </div>
@@ -331,15 +331,7 @@
         </div>
 
         <!-- Carte -->
-        <div class="map-container">
-            <h2>📍 Notre localisation</h2>
-            <div class="map-placeholder">
-                🗺️ Carte Google Maps à intégrer ici
-            </div>
-            <p style="color: #666; margin-top: 1rem; text-align: center;">
-                Nous sommes situés à Tlemcen, facilement accessible en voiture ou en transport en commun
-            </p>
-        </div>
+        
     </div>
     
     <!-- Script de gestion des informations de contact -->
