--- a/new-reservations.html
+++ b/new-reservations.html
@@ -446,7 +446,7 @@
                         </div>
                         <div class="detail-item">
                             <div class="detail-label">💰 Prix Total</div>
-                            <div class="detail-value">${reservation.totalPrice} DH</div>
+                            <div class="detail-value">${reservation.totalPrice} €</div>
                         </div>
                         ${reservation.notes ? `
                         <div class="detail-item" style="grid-column: 1 / -1;">
