--- a/new-reservations.html
+++ b/new-reservations.html
@@ -448,6 +448,42 @@
                             <div class="detail-label">💰 Prix Total</div>
                             <div class="detail-value">${reservation.totalPrice} €</div>
                         </div>
+                        ${reservation.paymentMethod ? `
+                        <div class="detail-item" style="grid-column: 1 / -1; background: #e3f2fd; padding: 12px; border-radius: 8px; margin-top: 12px;">
+                            <div class="detail-label" style="font-weight: 600; color: #1976d2;">💳 Informations de Paiement</div>
+                            <div style="display: grid; grid-template-columns: auto 1fr; gap: 8px; margin-top: 8px;">
+                                <strong>Mode:</strong>
+                                <span>${
+                                    reservation.paymentMethod === 'stripe' ? '💳 Stripe (Carte bancaire)' :
+                                    reservation.paymentMethod === 'paypal' ? '💰 PayPal' :
+                                    reservation.paymentMethod === 'bank_transfer' ? '🏦 Virement bancaire' :
+                                    reservation.paymentMethod === 'reserve_without_payment' ? '📞 Réservé sans payer' :
+                                    reservation.paymentMethod
+                                }</span>
+                                <strong>Statut:</strong>
+                                <span style="font-weight: 600; color: ${reservation.paymentStatus === 'completed' ? '#28a745' : '#ffc107'};">
+                                    ${
+                                        reservation.paymentStatus === 'completed' ? '✅ Payé' :
+                                        reservation.paymentStatus === 'pending' ? '⏳ En attente de vérification' :
+                                        reservation.paymentStatus === 'failed' ? '❌ Échoué' :
+                                        reservation.paymentStatus || 'Non spécifié'
+                                    }
+                                </span>
+                                ${reservation.paypalTransactionId ? `
+                                <strong>ID PayPal:</strong>
+                                <span>${reservation.paypalTransactionId}</span>
+                                ` : ''}
+                                ${reservation.stripePaymentIntentId ? `
+                                <strong>ID Stripe:</strong>
+                                <span>${reservation.stripePaymentIntentId}</span>
+                                ` : ''}
+                                ${reservation.paymentNotes ? `
+                                <strong>Notes:</strong>
+                                <span>${reservation.paymentNotes}</span>
+                                ` : ''}
+                            </div>
+                        </div>
+                        ` : ''}
                         ${reservation.notes ? `
                         <div class="detail-item" style="grid-column: 1 / -1;">
                             <div class="detail-label">📝 Notes</div>
