Reorganize project structure into clean folders
- Create public/ folder for all user-facing files (HTML, JS, images)
- Create docs/ folder for all documentation (.md files)
- Create scripts/ folder for utility and test scripts
- Update server.js to serve files from public/ folder
- Update all HTML file references to use js/ and images/ paths
- Remove unused files (package copy.json, Me.txt, empty folders)
- Move backend test scripts to scripts/ folder
- Move backend documentation to docs/backend/
- Add PROJECT_STRUCTURE.md documenting the new organization

Benefits:
 Clean separation of concerns (public/backend/docs/scripts)
 Easy to navigate and maintain
 Production-ready structure
 Scalable organization

--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -321,6 +321,6 @@
     </script>
     
     <!-- Script de gestion du thème Dark/Light -->
-    <script src="theme.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
