--- a/public/bank-transfer.html
+++ b/public/bank-transfer.html
@@ -338,7 +338,7 @@
     <div class="toast" id="toast">✅ Copié dans le presse-papiers !</div>
 
     <!-- Configuration Script -->
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
 
     <script>
         // Déterminer l'URL de l'API en fonction de l'environnement
