--- a/public/card-payment.html
+++ b/public/card-payment.html
@@ -211,7 +211,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
     <script>
         // Déterminer l'URL de l'API
         const API_BASE_URL = window.FandiConfig ? window.FandiConfig.getApiUrl() : 'http://localhost:3001';
