--- a/public/index.html
+++ b/public/index.html
@@ -4194,13 +4194,13 @@
     </a>
 
     <!-- Script de calcul prix avec majoration weekend -->
-    <script src="carPricing.js"></script>
+    <script src="js/carPricing.js"></script>
     
     <!-- Script de gestion des informations de contact -->
-    <script src="contact-info.js"></script>
+    <script src="js/contact-info.js"></script>
     
     <!-- Script de gestion du thème Dark/Light -->
-    <script src="theme.js"></script>
+    <script src="js/theme.js"></script>
 
     <!-- Script de partage social -->
     <script>
