--- a/public/payment.html
+++ b/public/payment.html
@@ -792,7 +792,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
     <script>
         // Récupérer les paramètres URL
         const urlParams = new URLSearchParams(window.location.search);
@@ -1226,9 +1226,9 @@
     </script>
     
     <!-- Script de gestion du thème Dark/Light -->
-    <script src="theme.js"></script>
+    <script src="js/theme.js"></script>
     
     <!-- Script de gestion des informations de contact -->
-    <script src="contact-info.js"></script>
+    <script src="js/contact-info.js"></script>
 </body>
 </html>
