--- a/public/paypal-payment.html
+++ b/public/paypal-payment.html
@@ -392,7 +392,7 @@
         <a href="payment.html" class="back-link">← Retour aux options de paiement</a>
     </div>
 
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
     <script>
         const API_BASE_URL = window.FandiConfig ? window.FandiConfig.getApiUrl() : 'http://localhost:3001';
         let reservationData;
