--- a/public/test-contact.html
+++ b/public/test-contact.html
@@ -85,7 +85,7 @@
         <div id="log"></div>
     </div>
     
-    <script src="contact-info.js"></script>
+    <script src="js/contact-info.js"></script>
     <script>
         const logEl = document.getElementById('log');
         
