--- a/public/new-reservations.html
+++ b/public/new-reservations.html
@@ -313,7 +313,7 @@
         <div id="reservationsList" class="reservations-list"></div>
     </div>
 
-    <script src="config.js"></script>
+    <script src="js/config.js"></script>
     <script>
         const API_BASE_URL = window.FandiConfig ? window.FandiConfig.getApiUrl() : 'http://localhost:3001';
 
